# Trafficlight-PWA

./: .gitignore  Cargo.toml  Dioxus.toml  index.html  package.json
assets/: manifest.json  tailwind.css
src/: ble.rs  helpers.rs  main.rs  tg.rs
src/components/: ble.rs  mod.rs
ssl/: cert.pem  key.pem
